--- a/public/find-die.html
+++ b/public/find-die.html
@@ -5,14 +5,14 @@
 <title>抜型を探す（ターゲット強調）</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
 <style>
-  :root { --ok:#2b8a3e; --ng:#c92a2a; --hint:#1c7ed6; --bd:#ddd; --tx:#222; --sub:#666; }
+  :root { --ok:#1c7ed6; --ng:#e03131; --loc:#2e7d32; --bd:#ddd; --tx:#222; --sub:#666; }
   *{ box-sizing:border-box; }
   body{ font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Noto Sans JP", sans-serif; margin:10px; color:var(--tx); }
   .row{display:flex;gap:12px;flex-wrap:wrap;align-items:flex-start}
   .panel{flex:1 1 360px;min-width:320px}
   .stack{position:relative;max-width:720px}
   video{width:100%;max-width:720px;border:1px solid var(--bd);border-radius:12px;background:#000}
-  canvas#ov{position:absolute;inset:0;pointer-events:none}
+  #ov{position:absolute;inset:0;pointer-events:none; display:block}
   .controls{display:flex;gap:10px;flex-wrap:wrap;margin:10px 0;align-items:center}
   button,.btn{padding:12px 16px;border-radius:12px;border:1px solid var(--bd);background:#fff;cursor:pointer}
   .pill{border-radius:999px}
@@ -20,8 +20,9 @@
   .target{font-size:15px}
   .target b{font-size:17px}
   .legend{font-size:12px;color:#555}
-  .okChip{background:#e6fcf5;color:#087f5b;border:1px solid #96f2d7;padding:0 6px;border-radius:6px}
+  .okChip{background:#e7f1ff;color:#1c7ed6;border:1px solid #a5c8ff;padding:0 6px;border-radius:6px}
   .ngChip{background:#fff5f5;color:#e03131;border:1px solid #ffc9c9;padding:0 6px;border-radius:6px}
+  .locChip{background:#e9f7ef;color:#2e7d32;border:1px solid #b7e1c0;padding:0 6px;border-radius:6px}
   .muted{color:#666;font-size:12px}
 
   .fixedBar{
@@ -30,7 +31,6 @@
     padding:6px 10px;border-radius:10px;font-weight:800; font-size:20px; z-index:20;
   }
 
-  /* 近接トースト（枠のそばに出す） */
   #toast{ position:fixed; left:0; top:0; pointer-events:none; z-index:30; }
   .toast-bubble{
     position:absolute; background:rgba(255,255,255,.95); border:1px solid #ccc;
@@ -38,7 +38,20 @@
     transform:translate(-50%,-150%); white-space:nowrap;
   }
 
-  /* ヘッダー操作群（右寄せで隠れにくく） */
+  /* ロック・オーバーレイ（フリーズ表示） */
+  #holdLayer{
+    position:absolute; inset:0; display:none;
+    background:rgba(0,0,0,.25);
+    align-items:center; justify-content:center; z-index:25; pointer-events:none;
+  }
+  #holdPanel{
+    pointer-events:auto;
+    background:#fff; color:#111; border:1px solid #ddd; border-radius:12px;
+    padding:10px 14px; box-shadow:0 8px 24px rgba(0,0,0,.25); text-align:center;
+  }
+  #holdPanel .title{ font-weight:800; font-size:16px; margin-bottom:6px; color:#1c7ed6; }
+  #holdPanel .sub{ font-size:12px; color:#555; }
+  #btnUnlock{ margin-top:8px; }
   .topbar{display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
   .topbar-right{display:flex;gap:10px;align-items:center;flex-wrap:wrap}
   input[type="range"]{ width: 140px; }
@@ -65,7 +78,9 @@
     <div class="target">
       目的の抜型：<b id="tgtBN">-</b> [<b id="tgtWC">-</b>] <span class="badge" id="tgtWN"></span>
       <div class="legend" style="margin-top:4px">
-        <span class="okChip">青枠＝一致（ロック）</span>　<span class="ngChip">赤枠＝不一致</span>
+        <span class="okChip">青枠＝一致（ロック）</span>　
+        <span class="ngChip">赤枠＝不一致</span>　
+        <span class="locChip">緑枠＝LOC</span>
       </div>
     </div>
   </div>
@@ -75,7 +90,17 @@
       <div class="stack" id="stack">
         <video id="v" playsinline muted></video>
         <canvas id="ov"></canvas>
+
+        <!-- ロック中フリーズ表示 -->
+        <div id="holdLayer">
+          <div id="holdPanel">
+            <div class="title">ロックしました</div>
+            <div class="sub">数秒後に自動解除 / 解除ボタンで再スキャン</div>
+            <button id="btnUnlock" class="pill">解除して再スキャン</button>
+          </div>
+        </div>
       </div>
+
       <div class="controls">
         <label class="badge">画像でテスト<input id="fileTest" type="file" accept="image/*" style="display:none" /></label>
       </div>
@@ -88,7 +113,7 @@
       <div class="muted" style="margin-top:6px">
         ・URL で <code>?book=&wc=&wn=</code> を渡してください（Airtable の URL 型フィールド推奨）。<br>
         ・プレーン型 <code>die-Book-WorkCord</code> と URL型 <code>?book=&wc=</code> の両方を検知します。<br>
-        ・一致時は<strong style="color:var(--hint)">青枠＆音＋枠近くに「ロック」吹き出し</strong>が出ます。<br>
+        ・一致時は<strong style="color:#1c7ed6">青枠＋音＋枠近くの吹き出し</strong>、不一致は赤枠、LOCは緑枠。<br>
         ・<code>&loc=</code> を付けると左上に固定棚表示。<br>
       </div>
     </div>
@@ -108,7 +133,7 @@
   document.getElementById("tgtWC").textContent = TGT.wc || "-";
   document.getElementById("tgtWN").textContent = TGT.wn || "";
 
-  // 固定棚の表示（任意）
+  // 固定棚表示（任意）
   const fixedEl = document.getElementById("fixed");
   fixedEl.textContent = "固定棚: " + (TGT.loc || "（なし）");
   if(TGT.loc){
@@ -123,17 +148,28 @@
   const errEl    = document.getElementById("err");
   const capEl    = document.getElementById("cap");
   const toastLayer = document.getElementById("toast");
+  const holdLayer  = document.getElementById("holdLayer");
+  const btnUnlock  = document.getElementById("btnUnlock");
+  const stack      = document.getElementById("stack");
 
   // ===== カメラ & 能力 =====
-  let stream=null, stopLoop=true, detector=null;
+  let stream=null, detector=null, stopLoop=true;
   let videoTrack=null, camCaps=null;
   let frameSkip=0, SCAN_EVERY=2;
 
+  // ロック保持
+  let isHeld=false;
+  let holdTimer=null;
+  const HOLD_MS = 2200; // 自動解除までの停止時間
+
+  // 状態
+  let lockedOnce=false; // 連続ビープ抑制
+
   capEl.textContent = ('BarcodeDetector' in window) ? "BarcodeDetector + jsQR" : "jsQR only";
 
+  // ===== カメラ制御 =====
   async function startCam(){
-    stopCam(); errEl.textContent="";
-    // 高解像度→段階フォールバック
+    stopCam(); setError("");
     const tries = [
       { video:{ facingMode:{exact:'environment'}, width:{ideal:1920}, height:{ideal:1080}, frameRate:{ideal:30} }, audio:false },
       { video:{ facingMode:'environment',           width:{ideal:1280}, height:{ideal:720},  frameRate:{ideal:30} }, audio:false },
@@ -154,8 +190,12 @@
 
     await bindCameraControls();
 
-    stopLoop=false;
-    v.requestVideoFrameCallback ? v.requestVideoFrameCallback(processFrame) : requestAnimationFrame(rAFLoop);
+    stopLoop=false; lockedOnce=false;
+    if(v.requestVideoFrameCallback){
+      v.requestVideoFrameCallback(processFrame);
+    }else{
+      requestAnimationFrame(rAFLoop);
+    }
     statusEl.textContent = (TGT.book && TGT.wc) ? "探索中…" : "URLに ?book と ?wc を付与してください";
   }
 
@@ -164,6 +204,7 @@
     if(stream){ stream.getTracks().forEach(t=>t.stop()); stream=null; }
     document.getElementById("btnStart").disabled=false;
     document.getElementById("btnStop").disabled=true;
+    clearHold();
     statusEl.textContent = "停止中";
   }
 
@@ -247,11 +288,8 @@
   };
   const dieKey  = (bn,wc)=>`${(bn||"").trim()}@@${(wc||"").trim()}`;
   const tgtKey  = dieKey(TGT.book, TGT.wc);
-  let lockedOnce = false;
 
-  // 近接トースト
   function showToastNearBox(text, pts){
-    if(!pts||pts.length<2) return;
     const rect = v.getBoundingClientRect();
     const scaleX = rect.width / (ov.width||v.videoWidth||1);
     const scaleY = rect.height/ (ov.height||v.videoHeight||1);
@@ -267,11 +305,17 @@
     setTimeout(()=>div.remove(), 1300);
   }
 
-  // 枠描画
-  function drawBoxPts(pts, color="#f00", lw=3, label=""){
+  // 色付き枠（毎回明示）
+  function drawBoxPts(pts, color, lw, label){
     if(!pts) return;
     octx.save();
-    octx.lineWidth = lw; octx.strokeStyle = color;
+    octx.globalCompositeOperation = 'source-over';
+    octx.lineJoin = 'round';
+    octx.lineCap  = 'round';
+    octx.shadowColor = 'rgba(0,0,0,.35)';
+    octx.shadowBlur  = 2;
+    octx.lineWidth = lw;
+    octx.strokeStyle = color;
     octx.beginPath();
     octx.moveTo(pts[0].x, pts[0].y);
     for(let i=1;i<pts.length;i++) octx.lineTo(pts[i].x, pts[i].y);
@@ -289,25 +333,21 @@
   async function detectMultiScale(canvas){
     const W = canvas.width, H = canvas.height;
     const off = new OffscreenCanvas(W,H);
-    const octx2 = off.getContext('2d', { willReadFrequently:true });
-    octx2.filter = 'contrast(120%) brightness(110%)';
-    octx2.drawImage(canvas,0,0,W,H);
+    const o2 = off.getContext('2d', { willReadFrequently:true });
+    o2.filter = 'contrast(120%) brightness(110%)';
+    o2.drawImage(canvas,0,0,W,H);
 
     const cand=[];
 
-    // Pass1: BarcodeDetector
     if(detector){
       try{
         const hits = await detector.detect(off);
         for(const h of hits){
-          if(h.rawValue){
-            cand.push({ raw:h.rawValue.trim(), pts:h.cornerPoints });
-          }
+          if(h.rawValue){ cand.push({ raw:h.rawValue.trim(), pts:h.cornerPoints }); }
         }
       }catch{}
     }
 
-    // Pass2: jsQR（縮小）で当たりを取りに行く
     if(cand.length===0){
       const scales=[0.75,0.6,0.5];
       for(const s of scales){
@@ -325,10 +365,8 @@
         }
       }
     }
-
     if(cand.length===0) return [];
 
-    // Pass3: 候補の周辺を原寸で再検証
     const confirmed=[];
     for(const c of cand){
       const xs=c.pts.map(p=>p.x), ys=c.pts.map(p=>p.y);
@@ -346,15 +384,19 @@
         const map=(p)=>({x:p.x+x0, y:p.y+y0});
         confirmed.push({ raw:hit.data.trim(), pts:[map(loc.topLeftCorner),map(loc.topRightCorner),map(loc.bottomRightCorner),map(loc.bottomLeftCorner)] });
       }else{
-        confirmed.push(c); // 弱いが候補として残す
+        confirmed.push(c);
       }
     }
     return confirmed;
   }
 
-  // rVFC ループ
-  async function processFrame(ts, meta){
-    if(!stream || !v.videoWidth){ if(!stopLoop) v.requestVideoFrameCallback(processFrame); return; }
+  // rVFC / rAF ループ
+  async function processFrame(){
+    if(stopLoop || !v.videoWidth){ if(!stopLoop) v.requestVideoFrameCallback(processFrame); return; }
+
+    // ロック中は「描画のみ」して検出を止める（フリーズ表示）
+    if(isHeld){ if(!stopLoop) v.requestVideoFrameCallback(processFrame); return; }
+
     fitOverlay();
     octx.clearRect(0,0,ov.width,ov.height);
 
@@ -367,12 +409,13 @@
       try{
         const det = await detectMultiScale(tmp);
         applyDetections(det);
-      }catch(e){ /* ignore */ }
+      }catch{}
     }
     if(!stopLoop) v.requestVideoFrameCallback(processFrame);
   }
   function rAFLoop(){
-    if(!stream || !v.videoWidth){ if(!stopLoop) requestAnimationFrame(rAFLoop); return; }
+    if(stopLoop || !v.videoWidth){ if(!stopLoop) requestAnimationFrame(rAFLoop); return; }
+    if(isHeld){ if(!stopLoop) requestAnimationFrame(rAFLoop); return; } // ロック中は検出停止
     fitOverlay();
     octx.clearRect(0,0,ov.width,ov.height);
     if((frameSkip++ % SCAN_EVERY)===0){
@@ -385,23 +428,29 @@
     if(!stopLoop) requestAnimationFrame(rAFLoop);
   }
 
-  // 検出適用・描画
+  // 適用・描画
   function applyDetections(list){
     let anyMatch=false;
+    octx.clearRect(0,0,ov.width,ov.height);
     for(const d of (list||[])){
       const raw=(d.raw||"").trim(); if(!raw) continue;
       const kind = classify(raw);
+
       if(kind==="die"){
         const p = parseDie(raw);
         const key = p ? dieKey(p.bn,p.wc) : "";
         const isMatch = key && key.toLowerCase()===tgtKey.toLowerCase();
         anyMatch = anyMatch || isMatch;
-        drawBoxPts(d.pts, isMatch? "#1c7ed6" : "#e03131", isMatch? 5 : (d.weak?2:3), isMatch? "一致":"");
+
+        drawBoxPts(d.pts, isMatch? getCss('--ok') : (d.weak? '#ff7777' : getCss('--ng')), isMatch? 5 : 3, isMatch? "一致":"");
+
         if(isMatch && !lockedOnce){
           lockedOnce = true; beep(); showToastNearBox("ロック", d.pts);
+          // ロック → 少しフリーズ
+          holdNow();
         }
       }else if(kind==="loc"){
-        drawBoxPts(d.pts, "#60a560", 3, "LOC");
+        drawBoxPts(d.pts, getCss('--loc'), 3, "LOC");
       }
     }
     statusEl.textContent = (list && list.length)
@@ -409,7 +458,28 @@
       : "探索中…";
   }
 
-  // 画像テスト
+  function getCss(varName){
+    return getComputedStyle(document.documentElement).getPropertyValue(varName).trim() || '#00f';
+  }
+
+  // ===== ロック保持（フリーズ → 解除可） =====
+  function holdNow(){
+    isHeld = true;
+    holdLayer.style.display = 'flex';
+    // 自動解除タイマー
+    clearTimeout(holdTimer);
+    holdTimer = setTimeout(clearHold, HOLD_MS);
+  }
+  function clearHold(){
+    isHeld = false;
+    holdLayer.style.display = 'none';
+    clearTimeout(holdTimer); holdTimer=null;
+    // 再ロックできるよう毎回リセット
+    lockedOnce = false;
+  }
+  btnUnlock.addEventListener('click', clearHold);
+
+  // ===== 画像テスト =====
   document.getElementById("fileTest").addEventListener("change", async (ev)=>{
     const f = ev.target.files?.[0]; if(!f) return;
     const img = new Image();
