--- a/public/scan-multi.html
+++ b/public/scan-multi.html
@@ -90,7 +90,7 @@
 <body>
 
 <header>
-  <h1>棚→型 QRスキャン登録</h1>
+  <h1>棚→型 QRスキャン登録_1018</h1>
   <div class="cam-controls">
     <button id="btnStart" class="btn btn-primary">カメラ開始</button>
     <button id="btnStop" class="btn" disabled>停止</button>
