--- a/public/scan-multi.html
+++ b/public/scan-multi.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="utf-8">
-<title>棚→型 QRスキャン登録</title>
+<title>棚→型 QRスキャン登録_1018</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
   :root {
